# datashield

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  start.sh
backend/: pyproject.toml  requirements.txt
backend/src/datashield/: database.py  main.py
backend/src/datashield/models/: schemas.py
backend/src/datashield/routers/: audit.py  compliance.py  dashboard.py  interceptor.py  policies.py  scanner.py  sessions.py  settings.py  threats.py
backend/src/datashield/services/: ai_service.py  detection_engine.py  policy_engine.py  token_vault.py
backend/tests/: conftest.py  test_api_endpoints.py  test_api_scanner.py  test_detection_engine.py  test_policy_engine.py  test_token_vault.py
docs/: README.md  api-spec.md  architecture.md  constraints.md  domain-model.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  Sidebar.jsx
frontend/src/pages/: AuditTrail.jsx  Compliance.jsx  Dashboard.jsx  Interceptor.jsx  Landing.jsx  PolicyStudio.jsx  Scanner.jsx  SemanticValidator.jsx  Settings.jsx  TokenVault.jsx
frontend/tests/: audit-trail.spec.js  compliance.spec.js  dashboard.spec.js  interceptor.spec.js  landing.spec.js  navigation.spec.js  policy-studio.spec.js  scanner.spec.js  semantic-validator.spec.js  settings.spec.js  token-vault.spec.js
