[project]
name = "datashield"
version = "1.0.0"
description = "Agentic Data Privacy Infrastructure"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite",
    "pydantic",
    "pyyaml",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
